Utworzono za pomocą Colaboratory

--- a/AI_Lublin_2023.ipynb
+++ b/AI_Lublin_2023.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyM8fPd3YK3yfXR3C3Als0fU",
+      "authorship_tag": "ABX9TyNPawz5gFHWoEx1oxMmY8T+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -97,7 +97,7 @@
         "    * generation of images from text\n",
         "    * programs generating images (ex. https://starryai.com/)\n",
         "  * **Natural Language Programming NLP**\n",
-        "    * chatGPT and similar\n",
+        "    * chatGPT and similar models\n",
         "    * language translators (simple English to Polish translator)\n",
         "* **Reinforcement learning** - how to train a robot\n",
         "  * train computer for to deal with the reversed pendulum\n",
@@ -159,29 +159,6 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**How to use Google Colab & Github?** <br>\n",
-        "Very nice tutorial is here: <br>\n",
-        "https://towardsdatascience.com/google-drive-google-colab-github-dont-just-read-do-it-5554d5824228 \n",
-        "<br> <br>\n",
-        "\n",
-        "\n",
-        "**Running example from Github** <br>\n",
-        "Open a github repository: <br> \n",
-        "https://github.com/marcinwolter/AI_Lublin_2023 <br>\n",
-        "Open a python notebook: \n",
-        "* AI_Lublin_2023.ipynb\n",
-        "<br>\n",
-        "Click \"Open in Colab\" button: <br>\n",
-        "* You see this tutorial, you can modify text and code\n",
-        "* You can run the code."
-      ],
-      "metadata": {
-        "id": "VXXyWgoyRcw_"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
         "## **<font color=\"green\">Run the test code:**\n",
         "\n",
         "\n",
@@ -232,6 +209,29 @@
     {
       "cell_type": "markdown",
       "source": [
+        "**How to use Google Colab & Github?** <br>\n",
+        "Very nice tutorial is here: <br>\n",
+        "https://towardsdatascience.com/google-drive-google-colab-github-dont-just-read-do-it-5554d5824228 \n",
+        "<br> <br>\n",
+        "\n",
+        "\n",
+        "**Running example from Github** <br>\n",
+        "Open a github repository: <br> \n",
+        "https://github.com/marcinwolter/AI_Lublin_2023 <br>\n",
+        "Open a python notebook: \n",
+        "* AI_Lublin_2023.ipynb\n",
+        "<br>\n",
+        "Click \"Open in Colab\" button: <br>\n",
+        "* You see this tutorial, you can modify text and code\n",
+        "* You can run the code."
+      ],
+      "metadata": {
+        "id": "VXXyWgoyRcw_"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "## **<font color=\"red\">Good!!! Now you know how to use GoogleColaboratory!!!**\n",
         "\n",
         "\n",
@@ -257,12 +257,33 @@
         "\n",
         "AI applications include **advanced web search engines (e.g., Google Search), recommendation systems (used by YouTube, Amazon, and Netflix), understanding human speech (such as Siri and Alexa), self-driving cars (e.g., Waymo), generative or creative tools (ChatGPT and AI art), automated decision-making, and competing at the highest level in strategic game systems (such as chess and Go).**\n",
         "\n",
-        "*(Wikipedia)*\n",
-        "\n",
-        "###**<font color='green'>We try to show simple examples (with code) performing some of these tasks.**"
+        "*(Wikipedia)*\n"
       ],
       "metadata": {
         "id": "Re3clUUQnPRU"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "\n",
+        "#**<font color='green'>This tutorial shows some simple examples of AI with code.**\n",
+        "\n",
+        "\n",
+        "---\n",
+        "\n",
+        "\n",
+        "\n",
+        "---\n",
+        "\n",
+        "\n",
+        "\n",
+        "---\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "ui5JvuvL5x62"
       }
     },
     {
@@ -335,7 +356,7 @@
         "</center>\n",
         "\n",
         "- **Human brain:**\n",
-        "  - $10^{14}$ neurons, frequency 100 Hz\n",
+        "  - $10^{14}$ neurons, frequency 100 Hz (very low comparing to computers)\n",
         "  - Parallel processing of data (complex pattern recognition in 100 ms - 10 steps only!!!)\n",
         "  - Learns on examples\n",
         "  - Resistant for errors and damaged neurons\n",
@@ -354,26 +375,12 @@
         "- ... \n",
         "- 1986 - backpropagation of errors, many application!\n",
         "- …\n",
-        "- 2010 - Deep Neural Networks – great progress in AI!!!!!!\n",
+        "- **2010 - Deep Neural Networks – great progress in AI!!!!!!**\n",
         "\n",
         "\n"
       ],
       "metadata": {
         "id": "UIY3QRG2n62C"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "#<font color='green'> **What are they used for?**\n",
-        "\n",
-        "\n",
-        "<img src='https://raw.githubusercontent.com/marcinwolter/Machine-learning-KISD-2022/main/images/lecture5/what-are-they-used-for-1.png' width=250px>\n",
-        "\n",
-        "**In (nearly) all fields of Artificial Intelligence.**\n"
-      ],
-      "metadata": {
-        "id": "EO8Ya1wq_Efu"
       }
     },
     {
@@ -548,7 +555,9 @@
       "cell_type": "markdown",
       "source": [
         "#<font color='green'> **Overfitting**\n",
-        "<center>\n",
+        "###<font color='green'> **when the algorithm learns too accurately**\n",
+        "\n",
+        "\n",
         "<img src='https://raw.githubusercontent.com/marcinwolter/AI_Lublin_2023/main/images/overfitting.png' width=550px>\n",
         "\n",
         "**We need a test sample (not used for training) to compare the values of the loss function.**\n",
@@ -4291,14 +4300,14 @@
       "source": [
         "#<font color='green'>**Summary**\n",
         "\n",
-        "### * Few AI algorithms were presented during this tutorial.\n",
-        "### * Conceptually they are not very complicated, the important factor is the size of the model, amount and quality of training sample and the computer power.\n",
-        "### * By getting \"huge\" the models start to act a little bit like human beings, talking to chatGPT we can forget we are not conversating with a human.\n",
+        "### - Few AI algorithms were presented during this tutorial.\n",
+        "### - Conceptually they are not very complicated, the important factor is the size of the model, amount and quality of training sample and the computer power.\n",
+        "### - By getting \"huge\" the models start to act a little bit like human beings, talking to chatGPT we can forget we are not conversating with a human.\n",
         "\n",
         "\n",
         "---\n",
         "\n",
-        "###<font color='red'> **I hope you had some fun playing with these models!!!**\n"
+        "###<font color='red'> **I hope you had some fun playing AI models!!!**\n"
       ],
       "metadata": {
         "id": "cMiyNZrfY3EA"
