Utworzono za pomocą Colaboratory

--- a/gpt2_text_generation_with_kerasnlp.ipynb
+++ b/gpt2_text_generation_with_kerasnlp.ipynb
@@ -35,7 +35,7 @@
         "In this tutorial, you will learn to use [KerasNLP](https://keras.io/keras_nlp/) to load a\n",
         "**pre-trained Large Language Model (LLM) - [GPT-2 model](https://openai.com/research/better-language-models)**\n",
         "(originally invented by OpenAI), finetune it to a specific text style, and\n",
-        "generate text based on users' input (also known as prompt). "
+        "generate text based on users' input (also known as prompt)."
       ]
     },
     {
@@ -63,7 +63,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "u0YkRA91UEzz"
       },
@@ -74,7 +74,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "id": "go8-jPx1UEz0"
       },
@@ -157,7 +157,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "id": "Nha7xk3lUEz2",
         "colab": {
@@ -199,7 +199,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "id": "Gz4t7PUPUEz3",
         "colab": {
@@ -224,8 +224,8 @@
         "  prompt = input()\n",
         "  if prompt==\"q\":\n",
         "    break\n",
-        "  start = time.time()  \n",
-        "  output = gpt2_lm.generate(prompt, max_length=200)  \n",
+        "  start = time.time()\n",
+        "  output = gpt2_lm.generate(prompt, max_length=200)\n",
         "  end = time.time()\n",
         "  print(\"\\nGPT-2 output:\")\n",
         "  print(output)\n",
@@ -295,7 +295,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "peXfUDJYUEz4",
         "colab": {
@@ -593,7 +593,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "id": "2XHe-CNfUEz4",
         "colab": {
@@ -632,7 +632,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "id": "nbPvEMQYUEz5"
       },
@@ -663,7 +663,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "id": "xRufqs-zUEz5",
         "colab": {
@@ -723,7 +723,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -760,8 +760,8 @@
         "  prompt = input()\n",
         "  if prompt==\"q\":\n",
         "    break\n",
-        "  start = time.time()  \n",
-        "  output = gpt2_lm.generate(prompt, max_length=400)  \n",
+        "  start = time.time()\n",
+        "  output = gpt2_lm.generate(prompt, max_length=400)\n",
         "  end = time.time()\n",
         "  print(\"Time used: \",end-start)\n",
         "  print(\"\\nGPT-2 output:\")\n",
@@ -774,11 +774,11 @@
     "accelerator": "GPU",
     "colab": {
       "provenance": [],
+      "gpuType": "T4",
       "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
-      "language": "python",
       "name": "python3"
     },
     "language_info": {
