Utworzono za pomocą Colaboratory

--- a/AI_Lublin_2023.ipynb
+++ b/AI_Lublin_2023.ipynb
@@ -14,7 +14,8 @@
     },
     "language_info": {
       "name": "python"
-    }
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -1168,10 +1169,10 @@
       ],
       "metadata": {
         "id": "4YdJi4qLGk2i",
-        "outputId": "3e061520-005d-49d6-fcae-8b63bc10ff3f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "3e061520-005d-49d6-fcae-8b63bc10ff3f"
       },
       "execution_count": 4,
       "outputs": [
@@ -2554,11 +2555,11 @@
       "execution_count": 20,
       "metadata": {
         "id": "wx-zNbLqB4K8",
-        "outputId": "460a9687-75b2-4da7-b5cd-d6b3dcb586b0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        }
+        },
+        "outputId": "460a9687-75b2-4da7-b5cd-d6b3dcb586b0"
       },
       "outputs": [
         {
@@ -2764,11 +2765,11 @@
       "execution_count": 27,
       "metadata": {
         "id": "gl7jcC7TdPTG",
-        "outputId": "2b8cff08-120e-4d04-c9e4-0f28fb1cac03",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "outputId": "2b8cff08-120e-4d04-c9e4-0f28fb1cac03"
       },
       "outputs": [
         {
@@ -2931,10 +2932,10 @@
       "execution_count": 29,
       "metadata": {
         "id": "gDkA05NE6QMs",
-        "outputId": "635d293d-275c-409b-81a5-590f7716ac5c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "635d293d-275c-409b-81a5-590f7716ac5c"
       },
       "outputs": [
         {
@@ -3224,11 +3225,11 @@
       "execution_count": 38,
       "metadata": {
         "id": "Ly3UN0SLLY2l",
-        "outputId": "401493b9-fb3c-4666-8cbe-13d63c07db1b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "outputId": "401493b9-fb3c-4666-8cbe-13d63c07db1b"
       },
       "outputs": [
         {
