Utworzono za pomocą Colaboratory

--- a/neural_machine_translation_with_keras_nlp.ipynb
+++ b/neural_machine_translation_with_keras_nlp.ipynb
@@ -3,6 +3,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/marcinwolter/AI_Lublin_2023/blob/main/neural_machine_translation_with_keras_nlp.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "dUQ0v-GgkjZz"
       },
       "source": [
@@ -88,28 +98,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "bgUhdmjlkjZ1",
-        "outputId": "28044750-7628-4b65-a904-e1e1517ee808"
+        "id": "bgUhdmjlkjZ1"
       },
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "['  Installing build dependencies ... \\x1b[?25l\\x1b[?25hdone',\n",
-              " '  Getting requirements to build wheel ... \\x1b[?25l\\x1b[?25hdone',\n",
-              " '  Preparing metadata (pyproject.toml) ... \\x1b[?25l\\x1b[?25hdone']"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 1
-        }
-      ],
+      "outputs": [],
       "source": [
         "!!pip install -q rouge-score\n",
         "!!pip install -q git+https://github.com/keras-team/keras-nlp.git --upgrade"
@@ -117,7 +110,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "pV7kvbPVkjZ2"
       },
@@ -145,7 +138,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "JLJ-uAJQkjZ2"
       },
@@ -176,40 +169,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "tLNBEn2RkjZ3",
-        "outputId": "073d7213-689d-485b-e075-5dd91b8691d2"
+        "id": "tLNBEn2RkjZ3"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "--2023-06-09 00:43:54--  https://www.manythings.org/anki/pol-eng.zip\n",
-            "Resolving www.manythings.org (www.manythings.org)... 173.254.30.110\n",
-            "Connecting to www.manythings.org (www.manythings.org)|173.254.30.110|:443... connected.\n",
-            "HTTP request sent, awaiting response... 200 OK\n",
-            "Length: 1868937 (1.8M) [application/zip]\n",
-            "Saving to: ‘pol-eng.zip’\n",
-            "\n",
-            "pol-eng.zip         100%[===================>]   1.78M  1.49MB/s    in 1.2s    \n",
-            "\n",
-            "2023-06-09 00:43:56 (1.49 MB/s) - ‘pol-eng.zip’ saved [1868937/1868937]\n",
-            "\n",
-            "Archive:  pol-eng.zip\n",
-            "  inflating: pol.txt                 \n",
-            "replace _about.txt? [y]es, [n]o, [A]ll, [N]one, [r]ename: y\n",
-            "  inflating: _about.txt              \n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "\n",
-        "! rm pol-eng.zip \n",
+        "! rm pol-eng.zip\n",
         "! rm pol.txt\n",
         "! wget https://www.manythings.org/anki/pol-eng.zip\n",
         "! unzip pol-eng.zip\n",
@@ -231,7 +198,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "id": "NIuRzQKakjZ3"
       },
@@ -258,27 +225,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "cDT565wokjZ3",
-        "outputId": "7f5b7329-8f1f-4081-9771-8244aa9846b9"
+        "id": "cDT565wokjZ3"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "('please be polite.', 'proszę, bądź grzeczna.')\n",
-            "('i need an operation.', 'potrzebuję operacji.')\n",
-            "('i wrote it down.', 'zapisałem to.')\n",
-            "('if i knew her address, i would write her a letter.', 'gdybym znał jej adres, napisałbym jej list.')\n",
-            "('you always forget.', 'ty zawsze zapominasz.')\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "for _ in range(5):\n",
         "    print(random.choice(text_pairs))"
@@ -296,26 +247,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "rJwq8C5pkjZ4",
-        "outputId": "c955fb24-9c17-471a-bd88-bb71860d10ae"
+        "id": "rJwq8C5pkjZ4"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "47159 total pairs\n",
-            "33013 training pairs\n",
-            "7073 validation pairs\n",
-            "7073 test pairs\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "random.shuffle(text_pairs)\n",
         "num_val_samples = int(0.15 * len(text_pairs))\n",
@@ -356,7 +292,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "id": "gpAE15CnkjZ4"
       },
@@ -390,7 +326,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "id": "Vln1kCSUkjZ4"
       },
@@ -416,24 +352,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "ywgB3wo8kjZ5",
-        "outputId": "380c264a-e31b-4357-84b6-c9e890d6de4f"
+        "id": "ywgB3wo8kjZ5"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "English Tokens:  ['here', 'has', 'think', 'will', 'all', '##ing', 'him', 'going', 'as', '##ed']\n",
-            "Spanish Tokens:  ['są', 'tak', 'tym', 'mogę', 'zrobić', 'już', 'ten', '##j', '##y', '##sz']\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "print(\"English Tokens: \", eng_vocab[100:110])\n",
         "print(\"Polish Tokens: \",  spa_vocab[100:110])"
@@ -451,7 +374,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "id": "TVSbnFCwkjZ5"
       },
@@ -478,29 +401,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "IVudxiIgkjZ5",
-        "outputId": "5677c93b-530b-42d8-a7ff-be96ffdcb67e"
+        "id": "IVudxiIgkjZ5"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "English sentence:  i can't stand the cold.\n",
-            "Tokens:  tf.Tensor([ 34  73   8  45 502  57 404  12], shape=(8,), dtype=int32)\n",
-            "Recovered text after detokenizing:  tf.Tensor(b\"i can ' t stand the cold .\", shape=(), dtype=string)\n",
-            "\n",
-            "Spanish sentence:  nie znoszę zimna.\n",
-            "Tokens:  tf.Tensor([  71 3237   55 2624  222   14], shape=(6,), dtype=int32)\n",
-            "Recovered text after detokenizing:  tf.Tensor(b'nie znosz\\xc4\\x99 zimna .', shape=(), dtype=string)\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "eng_input_ex = text_pairs[0][0]\n",
         "eng_tokens_ex = eng_tokenizer.tokenize(eng_input_ex)\n",
@@ -553,7 +458,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "id": "bzwCtEzGkjZ6"
       },
@@ -617,25 +522,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "OEHPvYv7kjZ6",
-        "outputId": "1b209d84-6c0a-4f7c-b276-b30a26840bf5"
+        "id": "OEHPvYv7kjZ6"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "inputs[\"encoder_inputs\"].shape: (64, 40)\n",
-            "inputs[\"decoder_inputs\"].shape: (64, 40)\n",
-            "targets.shape: (64, 40)\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "for inputs, targets in train_ds.take(1):\n",
         "    print(f'inputs[\"encoder_inputs\"].shape: {inputs[\"encoder_inputs\"].shape}')\n",
@@ -681,7 +572,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {
         "id": "GXKz36DCkjZ7"
       },
@@ -755,74 +646,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "VbMglKdzkjZ7",
-        "outputId": "039c3ea6-64ef-42d8-83ac-2925300c6393"
+        "id": "VbMglKdzkjZ7"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Model: \"transformer\"\n",
-            "__________________________________________________________________________________________________\n",
-            " Layer (type)                   Output Shape         Param #     Connected to                     \n",
-            "==================================================================================================\n",
-            " encoder_inputs (InputLayer)    [(None, None)]       0           []                               \n",
-            "                                                                                                  \n",
-            " token_and_position_embedding (  (None, None, 256)   3850240     ['encoder_inputs[0][0]']         \n",
-            " TokenAndPositionEmbedding)                                                                       \n",
-            "                                                                                                  \n",
-            " decoder_inputs (InputLayer)    [(None, None)]       0           []                               \n",
-            "                                                                                                  \n",
-            " transformer_encoder (Transform  (None, None, 256)   1315072     ['token_and_position_embedding[0]\n",
-            " erEncoder)                                                      [0]']                            \n",
-            "                                                                                                  \n",
-            " model_1 (Functional)           (None, None, 15000)  9283992     ['decoder_inputs[0][0]',         \n",
-            "                                                                  'transformer_encoder[0][0]']    \n",
-            "                                                                                                  \n",
-            "==================================================================================================\n",
-            "Total params: 14,449,304\n",
-            "Trainable params: 14,449,304\n",
-            "Non-trainable params: 0\n",
-            "__________________________________________________________________________________________________\n",
-            "Epoch 1/10\n",
-            "516/516 [==============================] - 70s 110ms/step - loss: 4.7465 - accuracy: 0.3257 - val_loss: 4.0716 - val_accuracy: 0.3692\n",
-            "Epoch 2/10\n",
-            "516/516 [==============================] - 36s 71ms/step - loss: 3.8535 - accuracy: 0.4036 - val_loss: 3.4921 - val_accuracy: 0.4302\n",
-            "Epoch 3/10\n",
-            "516/516 [==============================] - 37s 72ms/step - loss: 3.3818 - accuracy: 0.4483 - val_loss: 3.1279 - val_accuracy: 0.4679\n",
-            "Epoch 4/10\n",
-            "516/516 [==============================] - 37s 71ms/step - loss: 3.0420 - accuracy: 0.4834 - val_loss: 2.9127 - val_accuracy: 0.4968\n",
-            "Epoch 5/10\n",
-            "516/516 [==============================] - 37s 71ms/step - loss: 2.7738 - accuracy: 0.5172 - val_loss: 2.7192 - val_accuracy: 0.5258\n",
-            "Epoch 6/10\n",
-            "516/516 [==============================] - 37s 72ms/step - loss: 2.5609 - accuracy: 0.5467 - val_loss: 2.6098 - val_accuracy: 0.5435\n",
-            "Epoch 7/10\n",
-            "516/516 [==============================] - 37s 71ms/step - loss: 2.3827 - accuracy: 0.5732 - val_loss: 2.5573 - val_accuracy: 0.5536\n",
-            "Epoch 8/10\n",
-            "516/516 [==============================] - 37s 72ms/step - loss: 2.2367 - accuracy: 0.5969 - val_loss: 2.5306 - val_accuracy: 0.5628\n",
-            "Epoch 9/10\n",
-            "516/516 [==============================] - 37s 71ms/step - loss: 2.1119 - accuracy: 0.6160 - val_loss: 2.5085 - val_accuracy: 0.5764\n",
-            "Epoch 10/10\n",
-            "516/516 [==============================] - 37s 72ms/step - loss: 2.0035 - accuracy: 0.6343 - val_loss: 2.5293 - val_accuracy: 0.5737\n"
-          ]
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "<keras.callbacks.History at 0x7f6ce8301060>"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 17
-        }
-      ],
+      "outputs": [],
       "source": [
         "transformer.summary()\n",
         "transformer.compile(\n",
@@ -852,7 +680,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {
         "id": "XSoqoisvkjZ7"
       },
@@ -913,61 +741,10 @@
         "    print()\n"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "b4yCPEryl_DM",
-        "outputId": "6e695370-0851-46c4-80f9-3d8f3a0b35ae"
+        "id": "b4yCPEryl_DM"
       },
-      "execution_count": 19,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "** Example 0 **\n",
-            "tom said he wanted to be here.\n",
-            "tom powiedział , że chciał być tu być .\n",
-            "\n",
-            "** Example 1 **\n",
-            "is it far from here?\n",
-            "czy tu jest daleko ?\n",
-            "\n",
-            "** Example 2 **\n",
-            "how often do the buses run?\n",
-            "jak często głębokażczykiem ?\n",
-            "\n",
-            "** Example 3 **\n",
-            "you could have done it.\n",
-            "mógłbyś to zrobić .\n",
-            "\n",
-            "** Example 4 **\n",
-            "i introduced her to you last week.\n",
-            "w zeszłym tygodniu ją zabrałeś jej tygodniu .\n",
-            "\n",
-            "** Example 5 **\n",
-            "the customer agrees.\n",
-            "klie straszczaje się .\n",
-            "\n",
-            "** Example 6 **\n",
-            "no one likes war.\n",
-            "nikt nie lubi ostrzecraformania .\n",
-            "\n",
-            "** Example 7 **\n",
-            "tom came here alone.\n",
-            "tom przyjechał tu sama .\n",
-            "\n",
-            "** Example 8 **\n",
-            "in most cases, car accidents result from lack of sleep.\n",
-            "w zapadba , w wypadku drowie .\n",
-            "\n",
-            "** Example 9 **\n",
-            "despair drove him to attempt suicide.\n",
-            "gruporował go nagrowczyn .\n",
-            "\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -989,24 +766,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "MQ56hRY6kjZ8",
-        "outputId": "78dcf08e-c38d-46cd-dc7e-632cf42f5dbe"
+        "id": "MQ56hRY6kjZ8"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "ROUGE-1 Score:  {'precision': <tf.Tensor: shape=(), dtype=float32, numpy=0.5998991>, 'recall': <tf.Tensor: shape=(), dtype=float32, numpy=0.5713756>, 'f1_score': <tf.Tensor: shape=(), dtype=float32, numpy=0.5788744>}\n",
-            "ROUGE-2 Score:  {'precision': <tf.Tensor: shape=(), dtype=float32, numpy=0.3925>, 'recall': <tf.Tensor: shape=(), dtype=float32, numpy=0.38562772>, 'f1_score': <tf.Tensor: shape=(), dtype=float32, numpy=0.38414416>}\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "rouge_1 = keras_nlp.metrics.RougeN(order=1)\n",
         "rouge_2 = keras_nlp.metrics.RougeN(order=2)\n",
@@ -1052,7 +816,8 @@
     "colab": {
       "name": "neural_machine_translation_with_keras_nlp",
       "provenance": [],
-      "gpuType": "T4"
+      "gpuType": "T4",
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
